--- a/Back/JPA/src/main/resources/application.properties
+++ b/Back/JPA/src/main/resources/application.properties
@@ -10,10 +10,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8090
-
-spring.mail.host=smtp.xxxxxx.com
-spring.mail.port=465
-spring.mail.username=xxxxxx@xxxx.com.co
-spring.mail.password=xxxxxx
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.profiles.active=@activeProfile@
