--- a/Back/JPA/src/main/resources/application.properties
+++ b/Back/JPA/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #--------------------- DB Connection ------------------
-spring.datasource.url=jdbc:postgresql://localhost:5432/e_commerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/e-commerce
 spring.datasource.username=postgres
 spring.datasource.password=carlosAdmin
 
